# DungeonSound_legacy

./: LICENSE  README.md
DungeonSound/: CMakeLists.txt  UiForms.qrc  development_headers.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  navigationstate.cpp  navigationstate.h  nonstandard_icons.qrc  playbackmainwindow.cpp  playbackmainwindow.h  playbackmainwindow.ui  playlist.cpp  playlist.h  playlistbox.cpp  playlistbox.h  playlisteditwindow.cpp  playlisteditwindow.h  playlisteditwindow.ui  savable.h  showfile.cpp  showfile.h  soundsample.cpp  soundsample.h  soundsampleframe.cpp  soundsampleframe.h  soundsampleframe.ui
DungeonSound/flowlayout/: CMakeLists.txt  main.cpp  window.cpp  window.h
DungeonSound/tests/: CMakeLists.txt  test_saving.cpp
